--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   flex: 1;
   font-size: 1.5rem;
   user-select: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .nav_toggle {
@@ -42,6 +42,34 @@
 
 .nav_links:hover {
   background-color: #a5a58d;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100vh;
+  background-color: black;
+  color: #ff6b00;
+  padding: 110px 10px 0 20px;
+  gap: 0.5rem;
+}
+
+h1 {
+  font-size: 3.5rem;
+  font-family: "Crete Round", serif;
+}
+
+h4 {
+  font-size: 1.3rem;
+  color: white;
+  font-family: "Roboto", sans-serif;
+}
+
+p {
+  color: white;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
 }
 
 @media (max-width: 600px) {
