--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,17 @@ font-family: 'Roboto', sans-serif;
   color: #3e3c3c;
 }
 
+
+
+.hamburger {
+  display: none;
+}
+
+
+
+
+
+
 .intro_container {
   background-color: #262626;
   color: #fff;
@@ -521,10 +532,57 @@ font-family: 'Roboto', sans-serif;
 }
 
 @media screen and (max-width: 600px) {
-  /* Scale text to not overloap with graphics */
-  .mps_text p {
-    zoom: 150%;
-    transform: scale(1.5);
+  .hamburger {
+    display: block;
+    position: relative;
+    z-index: 1;
+    margin-right: 1rem;
+  
+    user-select: none;
+  
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  .hamburger span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+  
+    background-color: #fff;
+    border-radius: 6px;
+    z-index: 1;
+  
+    transform-origin: 0 0;
+  
+    transition: 0.4s;
+  }
+
+  .hamburger:hover span:nth-child(2) {
+    transform: translateX(10px);
+    background-color: #f55800;
+  }
+
+  .hamburger.is-active span:nth-child(1) {
+    transform: translate(0px, -2px) rotate(45deg);
+  }
+
+  .hamburger.is-active span:nth-child(2) {
+    opacity: 0;
+    transform: translateX(15px);
+  }
+  
+  .hamburger.is-active span:nth-child(3) {
+    transform: translate(-3px, 3px) rotate(-45deg);
+  }
+
+  .hamburger.is-active:hover span {
+    background-color: #f55800;
   }
   
   .intro_container {
@@ -582,8 +640,41 @@ font-family: 'Roboto', sans-serif;
     line-height: 20px;
   }
 
+  li a.envelope_logo {
+    opacity: 0;
+  }
+
   .nav_links_container {
-    display: none;
+    /* display: none; */
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #3C3A39;
+    top: 0px;
+    left: -100%;
+    text-align: center;
+    flex-direction: column;
+    padding: 0;
+    padding-top: 5rem;
+    transition: all .5s;
+  }
+
+  .nav_links_container .nav_link {
+    display: block;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 2.5rem;
+    width: 90%;
+    margin: auto;
+    align-items: center;
+    text-align: left;
+    padding-left: 1rem;
+    border-radius: 0;
+    border-bottom: 2px solid #6F6C6B;
+  }
+
+  .nav_links_container.show {
+    left: 0;
   }
 
   .nav_logo {
